# college-programming

./: .gitignore  README.md  hiworld.rb
Contest/: README.md
Contest/SYSU Collegiate Programming Contest 2018 Warming up Standing/: 1000.cpp
Contest/SYSU Hackathon 2017/: README.md  index.html
Contest/SYSU NVCPC 2016 Preview Contest/: 1000.cpp  1001.cpp  1002.cpp  1003_temp.cpp
Contest/SYSU NVCPC 2017 Preview Contest/: 1000.cpp  1001.cpp  1002.cpp  1003.cpp  1004_temp.cpp  1005_temp.cpp
Homework/: README.md
Homework/C Programming/: [023] Pascal's Triangle.c  [024] Count and Histogram.c  [025] A Card Game.c  [026] 回文数.c  [027] [H1003] 小壕的礼物.c  [028] [G1000] 螺旋方阵.c  [029] Digit Count.c  [030] Decode the string.c  [031] Basic Number Reading.c  [032] Number Shuffling.c  [033] 字符串基本操作.c  [034] Replace the Character.c  [035] 校门外的数.c  [036] 小明排队等饭吃.c  (+14 more)
Homework/C Programming Exercise/: [2016 C Midterm B] Decimal To Hexadecimal.c  [2016 C Midterm B] Derivative of Polynomial.c  [2016 C Midterm B] Judge Valid Variable Name.c  [2016 C Midterm B] Modulus of Reverse.c  [2016 C Midterm B] Simple Decoding.c  [2016 C Midterm B] Who is smarter.c
Homework/Principles of Animation and Design of Network-based Games/OpenGL/: .gitignore  CMakeLists.txt  CMakeSettings.json  OpenGL.cpp  OpenGL.fs.glsl
Homework/Principles of Animation and Design of Network-based Games/OpenGL/configuration/: root_directory.h.in
Homework/Principles of Animation and Design of Network-based Games/OpenGL/learnopengl/: camera.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h
OJ/: README.md
(+1571 files in other folders)
